Ajustes felexbox e @media

--- a/Index.html
+++ b/Index.html
@@ -15,40 +15,55 @@
         <a href="/"> Home </a>
         <nav>
             <ul class="menu">
-                <li> <a href="/"> Adote aqui</a> </li>
+                <li> <a href="/"> Quero Adotar</a> </li>
                 <li> <a href="/"> Quem somos</a></li>
                 <li> <a href="/">contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-    <h1 class="elementor-heading-title ">Adote aqui</h1>
-    <section class="Gatinho">
-        <Div>
-            <img src="./adoção/gatinhos-para-adocao.jpg" alt="Gatinhos">
-            <p>Eles adoram a companhia de seus humanos, amam carinho, colo, sofá e dormir junto na cama. Pode acreditar,
-                não há nada mais gostoso do que um gato ronronando em cima de você e demonstrando o quando fica feliz
-                com a sua companhia.</p>
-        </Div>
+        <h1 class="elementor-heading-title ">Adote aqui</h1>
+            <p>Nesse exato momento, xistem milhares de doguinhos e gatinhos esperando um humano para chamar de seu. Não há recompensa maior
+            do que vê-los se tornando aquela coisinha alegre e saudável depois de uma boa dose de cuidado e carinho.
+            Pensando bem, a pergunta é outra:
+            <strong> você pode mudar o destino de um animal de rua, por que não faria isso? </strong>
+        </p>
+        <section class="Gatinho">
+            <Div class="cat">
+                <img src="./adoção/gatinhos-para-adocao.jpg" alt="Gatinhos">
+            </Div>
+            <div class="cat">
+                <img src="./adoção/gattino-biberon-come-dare-latte-1024x683.jpg" alt="gatinho2">
+            </div>
+            <div class="cat">
+                <img src="./adoção/pretinho.jpg" alt="gatinho preto">
+            </div>
 
-        <div>
-            <img src="./adoção/caramelo.jpg" alt="Doguinho caramelo">
-            <p>Vários estudos já mostraram o bem que um pet faz à saúde das pessoas. Além disso, ter um animalzinho em
-                casa resulta em passeios que estimulam os exercícios, melhoram a pressão sanguínea e evita que o dono
-                apresente indícios de depressão, ansiedade ou estresse.</p>
-        </div>
-    </section>
-</main>
+            <div class="dog">
+                <img src="./adoção/caramelo.jpg" alt="Doguinho caramelo">
+            </div>
+            <div class="dog">
+                <img src="./adoção/doguinho2.jpg" alt="doguinho">
+            </div>
+            <div class="dog">
+                <img src="./adoção/doguinho3.jpg" alt="">
+            </div>
+
+        </section>
+    </main>
 
     <footer>
         <nav>
             <p>Endereço: </p>
             <p> Campo Comprido - Curitiba - Pr </p>
         </nav>
-<nav>
-   <p> Telefone: (41) 0000-0000 </p>
-    <p> adoteAqui@pet.com</p>
-</nav>
+        <nav>
+            <p> Telefone: (41) 0000-0000 </p>
+            <p> adoteAqui@pet.com</p>
+        </nav>
+
+        <small> Todos os direitos reservados
+        </small>
 
     </footer>
 
