--- a/guardando.html
+++ b/guardando.html
@@ -10,3 +10,18 @@ selector .elementor-heading-title {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+<p>Eles adoram a companhia de seus humanos, amam carinho, colo, sofá e dormir junto na cama. Pode acreditar,
+    não há nada mais gostoso do que um gato ronronando em cima de você e demonstrando o quando fica feliz
+    com a sua companhia.</p>
+
+    <p>Vários estudos já mostraram o bem que um pet faz à saúde das pessoas. Além disso, ter um animalzinho em
+        casa resulta em passeios que estimulam os exercícios, melhoram a pressão sanguínea e evita que o dono
+        apresente indícios de depressão, ansiedade ou estresse.</p>
+
+
+        .Gatinho {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 800px;
+            margin: 0 auto;
