Ajustes em texto

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Adote aqui</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@1,300&family=Noto+Sans&family=Pacifico&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="icon" href="./adoção/pata.jpg">
     <link rel="stylesheet" href="AdoteAqui.css">
     <link rel="stylesheet" href="./media.css">
 </head>
@@ -15,19 +17,21 @@
         <a href="/"> Home </a>
         <nav>
             <ul class="menu">
-                <li> <a href="/"> Quero Adotar</a> </li>
+                               <li> <a href="/"> Quero Adotar</a> </li>
                 <li> <a href="/"> Quem somos</a></li>
                 <li> <a href="/">contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1 class="elementor-heading-title ">Adote aqui</h1>
+        <nav class="inicio">
+        <h1 class> Adote aqui</h1>
             <p>Nesse exato momento, xistem milhares de doguinhos e gatinhos esperando um humano para chamar de seu. Não há recompensa maior
             do que vê-los se tornando aquela coisinha alegre e saudável depois de uma boa dose de cuidado e carinho.
             Pensando bem, a pergunta é outra:
             <strong> você pode mudar o destino de um animal de rua, por que não faria isso? </strong>
         </p>
+    </nav>
         <section class="Gatinho">
             <Div class="cat">
                 <img src="./adoção/gatinhos-para-adocao.jpg" alt="Gatinhos">
